# phonopy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  FHI-aims.html  Fleur.html  LICENSE  MANIFEST-phono3py.in  MANIFEST.in  MacOSX.html  README.html  README.md  abacus.html  abinit.html  aims.html  animation.html  anisotropic-qha.html  api-reference.html  auxiliary-tools.html  build-wheels.sh  castep.html  changelog.html  citation.html  cmake-format.py  command-options.html  cp2k.html  crystal.html  dev-requirements.txt  development.html  dftb+.html  documentation.html  dynamic-structure-factor.html  elk.html  examples.html  exciting.html  external-tools.html  features.html  formulation.html  (+52 more)
.doctrees/: FHI-aims.doctree  Fleur.doctree  MacOSX.doctree  README.doctree  abacus.doctree  abinit.doctree  aims.doctree  animation.doctree  anisotropic-qha.doctree  auxiliary-tools.doctree  castep.doctree  changelog.doctree  citation.doctree  command-options.doctree  cp2k.doctree  crystal.doctree  development.doctree  dftb+.doctree  documentation.doctree  dynamic-structure-factor.doctree  elk.doctree  environment.pickle  examples.doctree  exciting.doctree  external-tools.doctree  features.doctree  formulation.doctree  group-velocity.doctree  gruneisen.doctree  index.doctree  input-files.doctree  install.doctree  interfaces.doctree  introduction.doctree  lammps.doctree  migration-v4.doctree  migration-v5.doctree  mlp-sscha.doctree  output-files.doctree  phonopy-init.doctree  (+24 more)
_modules/: index.html
_sources/: FHI-aims.rst.txt  Fleur.rst.txt  MacOSX.rst.txt  abinit.rst  animation.md  anisotropic-qha.md  auxiliary-tools.md  auxiliary-tools.rst.txt  castep.rst  castep.rst.txt  changelog.md  changelog.md.txt  changelog.rst.txt  changelog.txt  citation.md  citation.rst.txt  citation.txt  command-options.md  command-options.md.txt  command-options.rst.txt  command-options.txt  cp2k.rst  dftb+.rst.txt  documentation.rst.txt  dynamic-structure-factor.md.txt  dynamic-structure-factor.rst.txt  elk.rst  elk.rst.txt  examples.rst.txt  examples.txt  external-tools.rst.txt  features.rst.txt  formulation.md  formulation.md.txt  formulation.rst.txt  formulation.txt  gruneisen.rst.txt  index.md  index.rst.txt  index.txt  (+40 more)
_static/: bootstrap-sphinx.css  documentation_options.js  procedure.dot
anharmonic/: BTE_RTA.py  __init__.py  conductivity_RTA.py  decay_channel.py  displacement_fc3.py  fc2.py  fc3.py  fc_interpolate.py  fc_tools.py  file_IO.py  gruneisen.py  im_self_energy.py  imag_self_energy.py  interaction.py  jointDOS.py  lifetime.py  linewidth.py  q2v.py  r2q.py  reciprocal_to_normal.py  settings.py  shortest_distance.py  triplets.py
c/: CMakeLists.txt  _forcefit.c  _lapackepy.c  _phono3py.c  _phono4py.c  _phonopy.c  _phonopy.cpp  _recgrid.cpp  _spglib.c  bzgrid.c  bzgrid.h  derivative_dynmat.c  derivative_dynmat.h  dynmat.c  dynmat.h  grgrid.c  grgrid.h  lagrid.c  lagrid.h  phonopy.c  phonopy.h  recgrid.c  recgrid.h  rgrid.c  rgrid.h  snf3x3.c  snf3x3.h  tetrahedron_method.c  tetrahedron_method.h
c/anharmonic/: alloc_array.c  flame_wrapper.c  gamma.c  interaction_strength.c  lapack_wrapper.c  phonoc_array.c  phonoc_math.c  phonoc_utils.c  triplets.c
c/anharmonic/other/: isotope.c
c/anharmonic/phonon3/: collision_matrix.c  fc3.c  frequency_shift.c  imag_self_energy.c  imag_self_energy_thm.c  imag_self_energy_with_g.c  interaction.c  real_to_reciprocal.c  reciprocal_to_normal.c
c/anharmonic/phonon4/: fc4.c  frequency_shift.c  real_to_reciprocal.c
c/anharmonic/triplet/: triplet.c  triplet_iw.c  triplet_kpoint.c
c/anharmonic_h/: flame_wrapper.h  gamma.h  interaction_strength.h  lapack_wrapper.h  phonoc_array.h  phonoc_math.h  phonoc_utils.h  triplets.h
c/anharmonic_h/other_h/: isotope.h
c/anharmonic_h/phonon3_h/: collision_matrix.h  fc3.h  frequency_shift.h  imag_self_energy.h  imag_self_energy_thm.h  imag_self_energy_with_g.h  interaction.h  real_to_reciprocal.h  reciprocal_to_normal.h
c/anharmonic_h/phonon4_h/: fc4.h  frequency_shift.h  real_to_reciprocal.h
c/anharmonic_h/triplet_h/: triplet.h  triplet_iw.h  triplet_kpoint.h
c/anharmonic_include/: alloc_array.h  interaction_strength.h
c/harmonic/: derivative_dynmat.c  dynmat.c  dynmat.h  lapack_wrapper.c  phonoc_array.c  phonoc_math.c  phonoc_utils.c  phonon.c
c/harmonic_h/: derivative_dynmat.h  dynmat.h  lapack_wrapper.h  phonoc_const.h  phonoc_utils.h  phonon.h
c/harmonic_include/: lapack_wrapper.h
c/kspclib/: kgrid.c  tetrahedron_method.c
c/kspclib_h/: tetrahedron_method.h
c/phonon3/: array.c  imag_self_energy.c  interaction.c  phonoc_math.c  real_to_normal.c  real_to_reciprocal.c  reciprocal_to_normal.c  self_energy.c
c/phonon3_h/: array.h  imag_self_energy.h  interaction.h  phonoc_math.h  real_to_normal.h  real_to_reciprocal.h  reciprocal_to_normal.h  self_energy.h
c/spglib/: arithmetic.c  cell.c  debug.c  delaunay.c  determination.c  hall_symbol.c  kgrid.c  kpoint.c  lattice.c  mathfunc.c  niggli.c  overlap.c  pointgroup.c  primitive.c  primitive.h  refinement.c  site_symmetry.c  sitesym_database.c  spacegroup.c  spg_database.c  spglib.c  spglib.h  spin.c  symmetry.c  tetrahedron_method.c  triplet_kpoint.c
c/spglib_h/: arithmetic.h  cell.h  debug.h  determination.h  hall_symbol.h  kgrid.h  kpoint.h  lattice.h  mathfunc.h  niggli.h  overlap.h  pointgroup.h  primitive.h  refinement.h  site_symmetry.h  sitesym_database.h  spacegroup.h  spg_database.h  spglib.h  spin.h  symmetry.h  tetrahedron_method.h  triplet_kpoint.h  version.h
c/spglib_include/: kpoint.h  spglib.h
conda/: .binstar.yml  anaconda_deploy.sh  bld.bat  build.sh  meta.yaml
doc/: FHI-aims.rst  Fleur.rst  MacOSX.inc  MacOSX.rst  README.md  abacus.rst  abinit.rst  aims.rst  animation.rst  anisotropic-qha.md  api-reference.md  auxiliary-tools.md  auxiliary-tools.rst  castep.rst  changelog.md  changelog.rst  citation.md  citation.rst  command-options.md  command-options.rst  conf.py  cp2k.rst  crystal.rst  development.md  dftb+.rst  documentation.md  documentation.rst  elk.rst  examples.md  (+66 more)
(+1198 files in other folders)
