[build-system]
requires = ["setuptools", "wheel", "numpy"]

[tool.ruff]
line-length = 88
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # pycodestyle-errors
    "D", # pydocstyle
]
extend-ignore = [
    "D417",
    "D100",
]
exclude = [
  "test/phonon/test_irreps.py",
  "test/qha/test_electron.py",
  "phonopy/interface/cp2k.py",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
