[build-system]
requires = ["scikit-build-core", "nanobind", "numpy"]
build-backend = "scikit_build_core.build"

[project]

name = "phonopy"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
description = "This is the phonopy module."
authors = [{ name = "Atsushi Togo", email = "atztogo@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.17.0",
    "PyYAML>=5.3",
    "matplotlib>=2.2.2",
    "h5py>=3.0",
    "spglib>=2.3",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
cp2k = ["cp2k-input-tools"]
plot = ["seekpath"]

[project.scripts]
phonopy = "phonopy.scripts.phonopy:run"
phonopy-load = "phonopy.scripts.phonopy_load:run"
# phonopy-qha = "phonopy.scripts.phonopy-qha"
# phonopy-bandplot = "phonopy.scripts.phonopy-bandplot"
# phonopy-vasp-born = "phonopy.scripts.phonopy-vasp-born"
# phonopy-vasp-efe = "phonopy.scripts.phonopy-vasp-efe"
# phonopy-crystal-born = "phonopy.scripts.phonopy-crystal-born"
# phonopy-calc-convert = "phonopy.scripts.phonopy-calc-convert"
# phonopy-propplot = "phonopy.scripts.phonopy-propplot"
# phonopy-tdplot = "phonopy.scripts.phonopy-tdplot"
# phonopy-gruneisen = "phonopy.scripts.phonopy-gruneisen"
# phonopy-gruneisenplot = "phonopy.scripts.phonopy-gruneisenplot"
# phonopy-pdosplot = "phonopy.scripts.phonopy-pdosplot"

[tool.sciki-build]
cmake.verbose = true
logging.level = "INFO"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.exclude = ["*"]
sdist.include = ["test", "LICENSE", "c", "example", "phonopy", "pyproject.toml", "CMakeLists.txt", "README.md"]

[tool.setuptools_scm]
write_to = "phonopy/_version.py"

[tool.ruff]
line-length = 88
lint.select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # pycodestyle-errors
    "D", # pydocstyle
]
lint.extend-ignore = ["D417", "D100"]
exclude = [
    "test/phonon/test_irreps.py",
    "test/qha/test_electron.py",
    "phonopy/interface/cp2k.py",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
